docs-archive/apache-airflow-providers-fab/1.2.2/_sources/_api/airflow/providers/fab/auth_manager/views/user_edit/index.rst.txt
:py:mod:`airflow.providers.fab.auth_manager.views.user_edit`
============================================================

.. py:module:: airflow.providers.fab.auth_manager.views.user_edit


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.fab.auth_manager.views.user_edit.CustomUserInfoEditView
   airflow.providers.fab.auth_manager.views.user_edit.CustomResetMyPasswordView
   airflow.providers.fab.auth_manager.views.user_edit.CustomResetPasswordView




.. py:class:: CustomUserInfoEditView


   Bases: :py:obj:`flask_appbuilder.security.views.UserInfoEditView`

   Customize permission names for FAB's builtin UserInfoEditView.

   .. py:attribute:: class_permission_name

      

   .. py:attribute:: route_base
      :value: '/userinfoeditview'

      

   .. py:attribute:: method_permission_name

      

   .. py:attribute:: base_permissions

      


.. py:class:: CustomResetMyPasswordView


   Bases: :py:obj:`flask_appbuilder.security.views.ResetMyPasswordView`

   Customize permission names for FAB's builtin ResetMyPasswordView.

   .. py:attribute:: class_permission_name

      

   .. py:attribute:: method_permission_name

      

   .. py:attribute:: base_permissions

      


.. py:class:: CustomResetPasswordView


   Bases: :py:obj:`flask_appbuilder.security.views.ResetPasswordView`

   Customize permission names for FAB's builtin ResetPasswordView.

   .. py:attribute:: class_permission_name

      

   .. py:attribute:: method_permission_name

      

   .. py:attribute:: base_permissions

      


