docs-archive/apache-airflow-providers-fab/2.0.1/_sources/_api/airflow/providers/fab/auth_manager/views/user_edit/index.rst.txt
airflow.providers.fab.auth_manager.views.user_edit
==================================================

.. py:module:: airflow.providers.fab.auth_manager.views.user_edit


Classes
-------

.. autoapisummary::

   airflow.providers.fab.auth_manager.views.user_edit.CustomUserInfoEditView
   airflow.providers.fab.auth_manager.views.user_edit.CustomResetMyPasswordView
   airflow.providers.fab.auth_manager.views.user_edit.CustomResetPasswordView


Module Contents
---------------

.. py:class:: CustomUserInfoEditView

   Bases: :py:obj:`flask_appbuilder.security.views.UserInfoEditView`


   Customize permission names for FAB's builtin UserInfoEditView.


   .. py:attribute:: class_permission_name
      :value: 'My Profile'


      Override class permission name default fallback to self.__class__.__name__



   .. py:attribute:: route_base
      :value: '/userinfoeditview'


      Override this if you want to define your own relative url 



   .. py:attribute:: method_permission_name

      Override method permission names, example::

          method_permissions_name = {
              'get_list': 'read',
              'get': 'read',
              'put': 'write',
              'post': 'write',
              'delete': 'write'
          }



   .. py:attribute:: base_permissions

      List with allowed base permission.
      Use it like this if you want to restrict your view to readonly::

          class MyView(ModelView):
              base_permissions = ['can_list','can_show']



.. py:class:: CustomResetMyPasswordView

   Bases: :py:obj:`flask_appbuilder.security.views.ResetMyPasswordView`


   Customize permission names for FAB's builtin ResetMyPasswordView.


   .. py:attribute:: class_permission_name
      :value: 'My Password'


      Override class permission name default fallback to self.__class__.__name__



   .. py:attribute:: method_permission_name

      Override method permission names, example::

          method_permissions_name = {
              'get_list': 'read',
              'get': 'read',
              'put': 'write',
              'post': 'write',
              'delete': 'write'
          }



   .. py:attribute:: base_permissions

      List with allowed base permission.
      Use it like this if you want to restrict your view to readonly::

          class MyView(ModelView):
              base_permissions = ['can_list','can_show']



.. py:class:: CustomResetPasswordView

   Bases: :py:obj:`flask_appbuilder.security.views.ResetPasswordView`


   Customize permission names for FAB's builtin ResetPasswordView.


   .. py:attribute:: class_permission_name
      :value: 'Passwords'


      Override class permission name default fallback to self.__class__.__name__



   .. py:attribute:: method_permission_name

      Override method permission names, example::

          method_permissions_name = {
              'get_list': 'read',
              'get': 'read',
              'put': 'write',
              'post': 'write',
              'delete': 'write'
          }



   .. py:attribute:: base_permissions

      List with allowed base permission.
      Use it like this if you want to restrict your view to readonly::

          class MyView(ModelView):
              base_permissions = ['can_list','can_show']



